# fff

./: .env.example  .gitignore  README.md  pyproject.toml
.dcs/: PRD.md
app/: errors.py  extensions.py  main.py  queries.py  seeds.py
app/api/: __init__.py  allocation.py  excel_imports.py  files.py  files_orm.py  labor.py  maintenance.py  ouen.py  salary.py
app/auth/: __init__.py  forms.py  service.py  views.py
app/config/: __init__.py  base.py  dev.py  prd.py  stg.py
app/db/: __init__.py  manager.py  records.py
app/excel_imports/: __init__.py  api.py  forms.py  service.py  views.py
app/files/: __init__.py  api.py  forms.py  service.py  views.py
app/forms/: __init__.py  auth.py  excel_import_form.py  file_form.py  upload.py
app/home/: __init__.py  views.py
app/models/: __init__.py  account.py  allocation.py  base.py  cost_center.py  dat_allocation.py  dat_labor_transfer.py  dat_ouen.py  dat_processing_month.py  dat_salary.py  dat_upload_batch.py  department.py  district.py  excel_import.py  file.py  inventory_data.py  labor_transfer.py  labor_unit_price.py  mst_account.py  mst_cost_center.py  mst_department.py  mst_district.py  mst_filetype.py  mst_kbn.py  mst_section.py  mst_user.py  mst_wbs.py  ouen.py  processing_month.py  salary.py  sales_data.py  section.py  (+7 more)
config/: excel_formats.yaml
docs/: PRD.md  external_design.md  internal_design.md  requirements.md
scripts/: create_admin.py  generate_sample_excel.py  import_file_to_table.py  init_app_db.py  seed_masters.py
tests/: conftest.py  test_auth.py  test_excel_reader.py  test_validators.py
(+127 files in other folders)
