[project]
name = "fff"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "flask-htmx>=0.4.0",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.3.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
]
