[project]
name = "Roumu"
version = "0.1.0"
description = "システム"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flask>=3.1.0",
    "flask-htmx>=0.4.0",
    "flask-login>=0.6.3",
    "flask-migrate>=4.0",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.3.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pyodbc>=5.3.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0",
    "werkzeug>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-flask>=1.3.0",
]

[tool.flask]
app = "app.main:create_app"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-flask>=1.3.0",
]
